force-app/main/default/objects/QuoteLineItem/fields/DiscountUnit__c.field-meta.xml
<CustomField>
    <fullName>DiscountUnit__c</fullName>
    <description>field to store the discount unit to be used</description>
    <label>Discount Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>