force-app/main/default/objects/QuoteLineItem/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <description>Field to save the discount value of the Quote Line Item</description>
    <label>Discount Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>