force-app/main/default/objects/QuoteLineItem/fields/FuelPrice__c.field-meta.xml
<CustomField>
    <fullName>FuelPrice__c</fullName>
    <label>Fuel Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>