force-app/main/default/objects/QuoteLineItem/fields/IsMandatoryProduct__c.field-meta.xml
<CustomField>
    <fullName>IsMandatoryProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to make mandatory products on quote line Item</description>
    <label>Is Mandatory Product</label>
    <type>Checkbox</type>
</CustomField>